--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site",
   "version": "3.0.1",
-  "homepage": "https://saharukh.com/",
+  "homepage": "https://imsaharukh.github.io/personal-site/",
   "license": "MIT",
   "repository": {
     "type": "git",
