--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "personal-site",
   "version": "3.0.1",
-  "homepage": "https://imsaharukh.github.io/personal-site/",
+  "homepage": "https://imsaharukh.github.io/portfolio-site/",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/imSaharukh/personal-site.git"
+    "url": "https://github.com/imSaharukh/portfolio-site.git"
   },
   "scripts": {
     "build": "rimraf ./build && react-scripts build",
